fix: Implementing a dynamic filter for generating the Folha de Ponto report.